[workspace]
resolver = "2"
members = ["contracts/grant_contracts", "contracts/vesting_contracts"]

[lib]
crate-type = ["cdylib"]
path = "contracts/grant_contracts/src/lib.rs"

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
