[package]
name = "grant_contracts"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

# Pin arbitrary to 1.2.x for compatibility with stellar-xdr 20.1.0
# (stellar-xdr's Arbitrary derive fails with arbitrary 1.3+ / derive_arbitrary 1.4+ which add try_size_hint)
[patch.crates-io]
arbitrary = { version = "=1.2.3" }
derive_arbitrary = { version = "=1.2.0" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
